Fixing blurriness

--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -134,5 +134,4 @@ main {
 }
 
 #gameCanvas {
-  border: solid 1px red;
 }
